fix overflow css

--- a/packages/visual-stack/src/layouts/ApplicationLayout/style.css
+++ b/packages/visual-stack/src/layouts/ApplicationLayout/style.css
@@ -47,5 +47,6 @@ body {
 
 .application-layout-content {
   flex: 1 1 auto;
-  overflow: auto;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
